--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
         </div>
 
         <div class="hero-figure" aria-hidden="false">
-          <img src="https://source.unsplash.com/800x600/?developer,laptop,workspace" alt="在筆電前撰寫程式碼的前端開發者" loading="lazy" />
+          <img src="https://images.unsplash.com/photo-1580894908361-967195033215?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="在筆電前撰寫程式碼的前端開發者" loading="lazy" />
         </div>
       </div>
     </section>
